kubernetes/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab-app
  namespace: production
spec:
  selector:
    app: lab-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
